remove crashlytics to make bb compile

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -128,7 +128,7 @@ android {
         }
         release {
             // enabling crashlytics for debug builds
-            ext.enableCrashlytics = true
+            ext.enableCrashlytics = false
         }
     }
 
